modified backend and Fix errors

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <body>
     <h1>Student Management</h1>
 
-    <form id="StudentForm">
+    <form id="studentForm">
         <input type="hidden" id="studentId"/>
         <label>
             Name:
@@ -58,6 +58,6 @@
         <tbody id="studentTableBody"></tbody>
     </table>
 
-    <script src="app.js" ></script>
+    <script src="script.js" ></script>
 </body>
 </html>
